src/main/java/org/compilerbau/GrParser.java
// Generated from D:/IdeaProjects/compilerbau/compilerbau/src/main/java/org/compilerbau/Gr.g4 by ANTLR 4.13.1
package org.compilerbau;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STRING_LITERAL=1, INTEGER_LITERAL=2, DEC_LITERAL=3, HEX_LITERAL=4, OCT_LITERAL=5, 
		BIN_LITERAL=6, PLUS=7, MINUS=8, TIMES=9, DIV=10, MOD=11, NE=12, GTE=13, 
		GT=14, LTE=15, LT=16, EQEQ=17, CARET=18, EQ=19, ANDAND=20, OROR=21, OR=22, 
		AND=23, NOT=24, DOT=25, PLUSEQ=26, MINUSEQ=27, STAREQ=28, SLASHEQ=29, 
		PERCENTEQ=30, CARETEQ=31, ANDEQ=32, OREQ=33, LPAR=34, RPAR=35, LBRC=36, 
		RBRC=37, LSQB=38, RSQB=39, COLON=40, SEMICOLON=41, COMMA=42, ARROW=43, 
		KW_PACKAGE=44, KW_BREAK=45, KW_CONTINUE=46, KW_FN=47, KW_IF=48, KW_ELSE=49, 
		KW_WHILE=50, KW_DO=51, KW_THEN=52, KW_RETURN=53, KW_MATCH=54, KW_CASE=55, 
		KW_LET=56, KW_PUBLIC=57, KW_STRUCT=58, KW_TRUE=59, KW_FALSE=60, KW_MUT=61, 
		KW_NULL=62, KW_NULLABLE=63, IDENT=64, NUMBER=65, Alpha=66, Digits=67, 
		WS=68, COMMENT=69, LINE_COMMENT=70;
	public static final int
		RULE_start = 0, RULE_item = 1, RULE_fundef = 2, RULE_structdef = 3, RULE_structfield = 4, 
		RULE_visbility = 5, RULE_statement = 6, RULE_letStatement = 7, RULE_expressionStatement = 8, 
		RULE_expression = 9, RULE_comparisonOperator = 10, RULE_compoundAssignOperator = 11, 
		RULE_expressionWithBlock = 12, RULE_blockExpression = 13, RULE_statements = 14, 
		RULE_arrayElements = 15, RULE_structExprStruct = 16, RULE_structExprFields = 17, 
		RULE_structExprField = 18, RULE_callParams = 19, RULE_loopExpression = 20, 
		RULE_predicateLoopExpression = 21, RULE_ifExpression = 22, RULE_identifier = 23, 
		RULE_param = 24, RULE_arraytype = 25, RULE_slicetype = 26, RULE_type = 27, 
		RULE_literalExpression = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "item", "fundef", "structdef", "structfield", "visbility", "statement", 
			"letStatement", "expressionStatement", "expression", "comparisonOperator", 
			"compoundAssignOperator", "expressionWithBlock", "blockExpression", "statements", 
			"arrayElements", "structExprStruct", "structExprFields", "structExprField", 
			"callParams", "loopExpression", "predicateLoopExpression", "ifExpression", 
			"identifier", "param", "arraytype", "slicetype", "type", "literalExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'!='", "'>='", "'>'", "'<='", "'<'", "'=='", "'^'", "'='", "'&&'", 
			"'||'", "'|'", "'&'", "'!'", "'.'", "'+='", "'-='", "'*='", "'/='", "'%='", 
			"'^='", "'&='", "'|='", "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", 
			"';'", "','", "'->'", "'package'", "'break'", "'continue'", "'fn'", "'if'", 
			"'else'", "'while'", "'do'", "'then'", "'return'", "'match'", "'case'", 
			"'let'", "'pub'", "'struct'", "'true'", "'false'", "'mut'", "'null'", 
			"'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STRING_LITERAL", "INTEGER_LITERAL", "DEC_LITERAL", "HEX_LITERAL", 
			"OCT_LITERAL", "BIN_LITERAL", "PLUS", "MINUS", "TIMES", "DIV", "MOD", 
			"NE", "GTE", "GT", "LTE", "LT", "EQEQ", "CARET", "EQ", "ANDAND", "OROR", 
			"OR", "AND", "NOT", "DOT", "PLUSEQ", "MINUSEQ", "STAREQ", "SLASHEQ", 
			"PERCENTEQ", "CARETEQ", "ANDEQ", "OREQ", "LPAR", "RPAR", "LBRC", "RBRC", 
			"LSQB", "RSQB", "COLON", "SEMICOLON", "COMMA", "ARROW", "KW_PACKAGE", 
			"KW_BREAK", "KW_CONTINUE", "KW_FN", "KW_IF", "KW_ELSE", "KW_WHILE", "KW_DO", 
			"KW_THEN", "KW_RETURN", "KW_MATCH", "KW_CASE", "KW_LET", "KW_PUBLIC", 
			"KW_STRUCT", "KW_TRUE", "KW_FALSE", "KW_MUT", "KW_NULL", "KW_NULLABLE", 
			"IDENT", "NUMBER", "Alpha", "Digits", "WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public TerminalNode KW_PACKAGE() { return getToken(GrParser.KW_PACKAGE, 0); }
		public TerminalNode IDENT() { return getToken(GrParser.IDENT, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrParser.SEMICOLON, 0); }
		public TerminalNode EOF() { return getToken(GrParser.EOF, 0); }
		public List<ItemContext> item() {
			return getRuleContexts(ItemContext.class);
		}
		public ItemContext item(int i) {
			return getRuleContext(ItemContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrVisitor ) return ((GrVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(KW_PACKAGE);
			setState(59);
			match(IDENT);
			setState(60);
			match(SEMICOLON);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 432486318895792128L) != 0)) {
				{
				{
				setState(61);
				item();
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ItemContext extends ParserRuleContext {
		public FundefContext fundef() {
			return getRuleContext(FundefContext.class,0);
		}
		public StructdefContext structdef() {
			return getRuleContext(StructdefContext.class,0);
		}
		public ItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).enterItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).exitItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrVisitor ) return ((GrVisitor<? extends T>)visitor).visitItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ItemContext item() throws RecognitionException {
		ItemContext _localctx = new ItemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_item);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				fundef();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				structdef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FundefContext extends ParserRuleContext {
		public TerminalNode KW_FN() { return getToken(GrParser.KW_FN, 0); }
		public TerminalNode IDENT() { return getToken(GrParser.IDENT, 0); }
		public List<TerminalNode> LPAR() { return getTokens(GrParser.LPAR); }
		public TerminalNode LPAR(int i) {
			return getToken(GrParser.LPAR, i);
		}
		public List<TerminalNode> RPAR() { return getTokens(GrParser.RPAR); }
		public TerminalNode RPAR(int i) {
			return getToken(GrParser.RPAR, i);
		}
		public TerminalNode ARROW() { return getToken(GrParser.ARROW, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public BlockExpressionContext blockExpression() {
			return getRuleContext(BlockExpressionContext.class,0);
		}
		public VisbilityContext visbility() {
			return getRuleContext(VisbilityContext.class,0);
		}
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrParser.COMMA, i);
		}
		public FundefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fundef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).enterFundef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).exitFundef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrVisitor ) return ((GrVisitor<? extends T>)visitor).visitFundef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FundefContext fundef() throws RecognitionException {
		FundefContext _localctx = new FundefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fundef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_PUBLIC) {
				{
				setState(73);
				visbility();
				}
			}

			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAR) {
				{
				setState(76);
				match(LPAR);
				setState(77);
				param();
				setState(78);
				match(RPAR);
				}
			}

			setState(82);
			match(KW_FN);
			setState(83);
			match(IDENT);
			setState(84);
			match(LPAR);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_MUT || _la==IDENT) {
				{
				setState(85);
				param();
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(86);
					match(COMMA);
					setState(87);
					param();
					}
					}
					setState(92);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(95);
			match(RPAR);
			setState(96);
			match(ARROW);
			setState(97);
			type();
			setState(98);
			blockExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructdefContext extends ParserRuleContext {
		public TerminalNode KW_STRUCT() { return getToken(GrParser.KW_STRUCT, 0); }
		public TerminalNode IDENT() { return getToken(GrParser.IDENT, 0); }
		public TerminalNode LBRC() { return getToken(GrParser.LBRC, 0); }
		public List<StructfieldContext> structfield() {
			return getRuleContexts(StructfieldContext.class);
		}
		public StructfieldContext structfield(int i) {
			return getRuleContext(StructfieldContext.class,i);
		}
		public TerminalNode RBRC() { return getToken(GrParser.RBRC, 0); }
		public VisbilityContext visbility() {
			return getRuleContext(VisbilityContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(GrParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GrParser.COMMA, i);
		}
		public StructdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).enterStructdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).exitStructdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrVisitor ) return ((GrVisitor<? extends T>)visitor).visitStructdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructdefContext structdef() throws RecognitionException {
		StructdefContext _localctx = new StructdefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_structdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_PUBLIC) {
				{
				setState(100);
				visbility();
				}
			}

			setState(103);
			match(KW_STRUCT);
			setState(104);
			match(IDENT);
			setState(105);
			match(LBRC);
			setState(106);
			structfield();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(107);
				match(COMMA);
				setState(108);
				structfield();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(RBRC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructfieldContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(GrParser.IDENT, 0); }
		public TerminalNode COLON() { return getToken(GrParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VisbilityContext visbility() {
			return getRuleContext(VisbilityContext.class,0);
		}
		public StructfieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structfield; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).enterStructfield(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).exitStructfield(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrVisitor ) return ((GrVisitor<? extends T>)visitor).visitStructfield(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructfieldContext structfield() throws RecognitionException {
		StructfieldContext _localctx = new StructfieldContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_structfield);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_PUBLIC) {
				{
				setState(116);
				visbility();
				}
			}

			setState(119);
			match(IDENT);
			setState(120);
			match(COLON);
			setState(121);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VisbilityContext extends ParserRuleContext {
		public TerminalNode KW_PUBLIC() { return getToken(GrParser.KW_PUBLIC, 0); }
		public VisbilityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_visbility; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).enterVisbility(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).exitVisbility(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrVisitor ) return ((GrVisitor<? extends T>)visitor).visitVisbility(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VisbilityContext visbility() throws RecognitionException {
		VisbilityContext _localctx = new VisbilityContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_visbility);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(KW_PUBLIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(GrParser.SEMICOLON, 0); }
		public ItemContext item() {
			return getRuleContext(ItemContext.class,0);
		}
		public LetStatementContext letStatement() {
			return getRuleContext(LetStatementContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrVisitor ) return ((GrVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				item();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				letStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				expressionStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LetStatementContext extends ParserRuleContext {
		public TerminalNode KW_LET() { return getToken(GrParser.KW_LET, 0); }
		public TerminalNode IDENT() { return getToken(GrParser.IDENT, 0); }
		public TerminalNode EQ() { return getToken(GrParser.EQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GrParser.SEMICOLON, 0); }
		public TerminalNode KW_MUT() { return getToken(GrParser.KW_MUT, 0); }
		public TerminalNode COLON() { return getToken(GrParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public LetStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_letStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).enterLetStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).exitLetStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrVisitor ) return ((GrVisitor<? extends T>)visitor).visitLetStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LetStatementContext letStatement() throws RecognitionException {
		LetStatementContext _localctx = new LetStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_letStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(KW_LET);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_MUT) {
				{
				setState(132);
				match(KW_MUT);
				}
			}

			setState(135);
			match(IDENT);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(136);
				match(COLON);
				setState(137);
				type();
				}
			}

			setState(140);
			match(EQ);
			setState(141);
			expression(0);
			setState(142);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionStatementContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GrParser.SEMICOLON, 0); }
		public ExpressionWithBlockContext expressionWithBlock() {
			return getRuleContext(ExpressionWithBlockContext.class,0);
		}
		public ExpressionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).enterExpressionStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrListener ) ((GrListener)listener).exitExpressionStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrVisitor ) return ((GrVisitor<? extends T>)visitor).visitExpressionStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionStatementContext expressionStatement() throws RecognitionException {
		ExpressionStatementContext _localctx = new ExpressionStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expressionStatement);
		try {
			setState(151);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				expression(0);
				setState(145);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				expressionWithBlock();
				setState(149);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(148);
					match(SEMICOLON);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
